demo2/cnp.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: demo2-cnp
  namespace: demo2
spec:
  endpointSelector:
    matchLabels:
      app: nginx
  ingress:
  - toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      rules:
        http:
        - method: "GET"
          path: "/allow/"
